cluster-setup-test/express-sample-app/manifest.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/runtime: js
    app.openshift.io/vcs-ref: 98eb19f697a7506ce577e71a949b4c9c5e296544
    app.openshift.io/vcs-uri: https://github.com/upslopeio/express-sample-app
  labels:
    app: express-sample-app
    app.kubernetes.io/instance: express-sample-app
    app.kubernetes.io/name: express-sample-app
  name: express-sample-app
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: express-sample-app
    app.kubernetes.io/instance: express-sample-app
    app.kubernetes.io/name: express-sample-app
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/runtime: js
    app.openshift.io/vcs-ref: 98eb19f697a7506ce577e71a949b4c9c5e296544
    app.openshift.io/vcs-uri: https://github.com/upslopeio/express-sample-app
  labels:
    app: express-sample-app
    app.kubernetes.io/instance: express-sample-app
    app.kubernetes.io/name: express-sample-app
    app.openshift.io/runtime: js
  name: express-sample-app
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: express-sample-app
      app.kubernetes.io/instance: express-sample-app
      app.kubernetes.io/name: express-sample-app
  template:
    metadata:
      annotations:
        app.openshift.io/runtime: js
        app.openshift.io/vcs-ref: 98eb19f697a7506ce577e71a949b4c9c5e296544
        app.openshift.io/vcs-uri: https://github.com/upslopeio/express-sample-app
      labels:
        app: express-sample-app
        app.kubernetes.io/instance: express-sample-app
        app.kubernetes.io/name: express-sample-app
    spec:
      containers:
      - env:
        - name: INGRESS_HOST
        - name: PROTOCOLS
        - name: LOG_LEVEL
          value: debug
        image: quay.io/upslopeio/express-sample-app:98eb19f697a7506ce577e71a949b4c9c5e296544
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 3000
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: express-sample-app
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/runtime: js
    app.openshift.io/vcs-ref: 98eb19f697a7506ce577e71a949b4c9c5e296544
    app.openshift.io/vcs-uri: https://github.com/upslopeio/express-sample-app
    argocd.argoproj.io/sync-options: Validate=false
    openshift.io/host.generated: "true"
  labels:
    app: express-sample-app
    app.kubernetes.io/instance: express-sample-app
    app.kubernetes.io/name: express-sample-app
  name: express-sample-app
spec:
  tls:
    termination: edge
  to:
    kind: Service
    name: express-sample-app
    weight: 100
  wildcardPolicy: None
